--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         })
         .then(data => {
           if (!Array.isArray(data) || data.length === 0) {
-            table.innerHTML += `<tr><td colspan="4">NO PREDICTIONS AVAILABLE</td></tr>`;
+            table.innerHTML += '<tr><td colspan="4">NO PREDICTIONS AVAILABLE</td></tr>';
             return;
           }
 
@@ -107,7 +107,7 @@
         })
         .catch(error => {
           console.error("FETCH ERROR:", error);
-          table.innerHTML += `<tr><td colspan="4">ERROR LOADING PREDICTIONS</td></tr>`;
+          table.innerHTML += '<tr><td colspan="4">ERROR LOADING PREDICTIONS</td></tr>';
         });
     }
 
