--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
       width: 80%;
       padding: 10px;
       margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
     button {
       padding: 10px 20px;
       background: #007bff;
       color: white;
       border: none;
+      border-radius: 4px;
       cursor: pointer;
+    }
+    button:hover {
+      background: #0056b3;
     }
     pre {
       background: #fff;
@@ -26,6 +32,7 @@
       border: 1px solid #ccc;
       white-space: pre-wrap;
       word-wrap: break-word;
+      border-radius: 4px;
     }
   </style>
 </head>
@@ -39,7 +46,8 @@
   <script>
     function downloadVideo() {
       const url = document.getElementById("videoUrl").value;
-      fetch("https://46fabecc-e288-42e0-8202-c1bc289c3f51-00-1gvwx7b34tegq.kirk.repl.co/download", {
+
+      fetch("https://46fabecc-e288-42e0-8202-c1bc289c3f51-00-1gvwx7b34tegq.kirk.repl.co:3000/download", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ url })
