--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Malachi — SOLOMON Bible Explorer</title>
+  <title>SOLOMON Bible Explorer</title>
   <style>
     body {
       margin: 0;
@@ -10,6 +10,19 @@
       background-color: red;
       color: white;
       font-family: Arial, sans-serif;
+    }
+
+    .search-container {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    #searchInput {
+      padding: 10px;
+      width: 60%;
+      font-size: 1.2em;
+      border-radius: 8px;
+      border: none;
     }
 
     .border-wrapper {
@@ -27,52 +40,138 @@
 
     h1 {
       text-align: center;
-      font-size: 2.5em;
-      margin-bottom: 10px;
+      font-size: 3em;
+      margin-bottom: 30px;
     }
 
     h2 {
       text-align: center;
       font-size: 2em;
-      margin-bottom: 30px;
+      margin-top: 40px;
+      margin-bottom: 20px;
     }
 
-    .back-link {
-      display: block;
-      margin-bottom: 20px;
-      font-size: 1.2em;
+    ul.book-list {
+      list-style: none;
+      padding-left: 0;
+      font-size: 1.5em;
+      line-height: 2em;
+      text-align: left;
+      max-width: 400px;
+      margin: auto;
+    }
+
+    ul.book-list li a {
       color: white;
       text-decoration: none;
+      display: block;
+      padding: 8px 12px;
+      border-radius: 6px;
     }
 
-    .back-link:hover {
+    ul.book-list li a:hover {
+      background-color: #ffffff33;
       text-decoration: underline;
-    }
-
-    .chapter-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 12px;
-      margin-top: 20px;
-    }
-
-    .chapter-grid a {
-      background-color: #ffffff22;
-      color: yellow;
-      text-decoration: none;
-      padding: 10px 16px;
-      border-radius: 8px;
-      font-size: 1.2em;
-      transition: background-color 0.3s;
-    }
-
-    .chapter-grid a:hover {
-      background-color: #ffffff55;
     }
   </style>
 </head>
 <body>
   <div class="border-wrapper">
     <div class="inner-content">
-      <a href="index
+      <h1>SOLOMON Bible Explorer</h1>
+
+      <!-- 🔍 Search Bar -->
+      <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Search book name..." onkeyup="searchBooks()" />
+      </div>
+
+      <!-- 📖 Book List -->
+      <div id="bookList">
+        <h2>Old Testament</h2>
+        <ul class="book-list">
+          <li><a href="genesis.html">Genesis</a></li>
+          <li><a href="exodus.html">Exodus</a></li>
+          <li><a href="leviticus.html">Leviticus</a></li>
+          <li><a href="numbers.html">Numbers</a></li>
+          <li><a href="deuteronomy.html">Deuteronomy</a></li>
+          <li><a href="joshua.html">Joshua</a></li>
+          <li><a href="judges.html">Judges</a></li>
+          <li><a href="ruth.html">Ruth</a></li>
+          <li><a href="1samuel.html">1 Samuel</a></li>
+          <li><a href="2samuel.html">2 Samuel</a></li>
+          <li><a href="1kings.html">1 Kings</a></li>
+          <li><a href="2kings.html">2 Kings</a></li>
+          <li><a href="1chronicles.html">1 Chronicles</a></li>
+          <li><a href="2chronicles.html">2 Chronicles</a></li>
+          <li><a href="ezra.html">Ezra</a></li>
+          <li><a href="nehemiah.html">Nehemiah</a></li>
+          <li><a href="esther.html">Esther</a></li>
+          <li><a href="job.html">Job</a></li>
+          <li><a href="psalms.html">Psalms</a></li>
+          <li><a href="proverbs.html">Proverbs</a></li>
+          <li><a href="ecclesiastes.html">Ecclesiastes</a></li>
+          <li><a href="songofsolomon.html">Song of Solomon</a></li>
+          <li><a href="isaiah.html">Isaiah</a></li>
+          <li><a href="jeremiah.html">Jeremiah</a></li>
+          <li><a href="lamentations.html">Lamentations</a></li>
+          <li><a href="ezekiel.html">Ezekiel</a></li>
+          <li><a href="daniel.html">Daniel</a></li>
+          <li><a href="hosea.html">Hosea</a></li>
+          <li><a href="joel.html">Joel</a></li>
+          <li><a href="amos.html">Amos</a></li>
+          <li><a href="obadiah.html">Obadiah</a></li>
+          <li><a href="jonah.html">Jonah</a></li>
+          <li><a href="micah.html">Micah</a></li>
+<li><a href="nahum.html">Nahum</a></li>
+<li><a href="habakkuk.html">Habakkuk</a></li>
+<li><a href="zephaniah.html">Zephaniah</a></li>
+<li><a href="haggai.html">Haggai</a></li>
+<li><a href="zechariah.html">Zechariah</a></li>
+<li><a href="malachi.html">Malachi</a></li>
+</ul>    <h2>New Testament</h2>
+    <ul class="book-list">
+      <li><a href="matthew.html">Matthew</a></li>
+      <li><a href="mark.html">Mark</a></li>
+      <li><a href="luke.html">Luke</a></li>
+      <li><a href="john.html">John</a></li>
+      <li><a href="acts.html">Acts</a></li>
+      <li><a href="romans.html">Romans</a></li>
+      <li><a href="1corinthians.html">1 Corinthians</a></li>
+      <li><a href="2corinthians.html">2 Corinthians</a></li>
+      <li><a href="galatians.html">Galatians</a></li>
+      <li><a href="ephesians.html">Ephesians</a></li>
+      <li><a href="philippians.html">Philippians</a></li>
+      <li><a href="colossians.html">Colossians</a></li>
+      <li><a href="1thessalonians.html">1 Thessalonians</a></li>
+      <li><a href="2thessalonians.html">2 Thessalonians</a></li>
+      <li><a href="1timothy.html">1 Timothy</a></li>
+      <li><a href="2timothy.html">2 Timothy</a></li>
+      <li><a href="titus.html">Titus</a></li>
+      <li><a href="philemon.html">Philemon</a></li>
+      <li><a href="hebrews.html">Hebrews</a></li>
+      <li><a href="james.html">James</a></li>
+      <li><a href="1peter.html">1 Peter</a></li>
+      <li><a href="2peter.html">2 Peter</a></li>
+      <li><a href="1john.html">1 John</a></li>
+      <li><a href="2john.html">2 John</a></li>
+      <li><a href="3john.html">3 John</a></li>
+      <li><a href="jude.html">Jude</a></li>
+      <li><a href="revelation.html">Revelation</a></li>
+    </ul>
+  </div>
+</div>
+
+  <!-- 🔧 Search Script -->
+  <script>
+    function searchBooks() {
+      const input = document.getElementById('searchInput').value.toLowerCase();
+      const links = document.querySelectorAll('#bookList a');
+      links.forEach(link => {
+        const text = link.textContent.toLowerCase();
+        link.style.display = text.includes(input) ? 'block' : 'none';
+      });
+    }
+  </script>
+</body>
+</html>
+    
